# crynk-webapp-dev

./: README.md
.github/workflows/: deploy-dev.yml
crynk-backend/: .env  Cargo.toml
crynk-backend/src/: main.rs  main.rs.bk
crynk-frontend/: package,json  package-lock.json
crynk-frontend/public/: index.html
crynk-frontend/src/: App.css  App.js  dashboard-styles.css  document-styles.css  index.js  styles.css  wallet-styles.css
crynk-frontend/src/components/: Dashboard.js  Dashboard.js.bk  Landing.js  Login.js  MerchantOnboard.js  MerchantOnboardingProcess.js  Payment.js  Register.js  Wallet.js  Wallet.js.bk
